--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,11 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+# Виртуальное окружение
+venv/
+
+# Локальная конфигурация с секретами
+config.py
+users.json
